overflowx-hidden for popup body for artefact-two.html to avoid horizontal scrolling while drag and drop a file

--- a/ui/assets/styles/css/main.css
+++ b/ui/assets/styles/css/main.css
@@ -2881,6 +2881,10 @@ input:disabled {
   width: 100%;
 }
 
+.overflowx-hidden {
+  overflow-x: hidden;
+}
+
 .input-meeting-text {
   width: 366px;
   height: 18px;
