--- a/ui/assets/styles/sass/_popup.scss
+++ b/ui/assets/styles/sass/_popup.scss
@@ -613,3 +613,6 @@ input:disabled{
 .project-selection-block img {
 	width: 100%;
 }
+.overflowx-hidden {
+	overflow-x: hidden;
+}
